--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <form>
         <input type="text" id="name" name="name">
         <input type="number" id="year" name="year">
-        <button type="submit" id="button"> Submit</button>
+        <input type="submit" value="Submit"id="button">
     </form>
     <script type="text/javascript" src="./script.js">
 </script>
