--- a/main.html
+++ b/main.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
   <body>
-	  <h3 id="url">https://localhost:8080/</h3>
-    <form>
-        <input type="text" id="name" name="name">
-        <input type="number" id="year" name="year">
-        <input type="submit" value="Submit"id="button">
-    </form>
+	 <h3 id="url">https://localhost:8080/</h3>
+	  <div>
+		  <label for="name">Name</label>
+		  <input id="name" name="name" type="text">
+		  <label for="year">Year</label>
+		  <input id="year" name="year" type="number">
+		  <button id="button" type="button" onclick="buttonClick()">submit</button>
+	  </div>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
